[package]
name = "destream_json"
version = "0.13.0"
authors = ["code@tinychain.net"]
edition = "2021"
license = "Apache-2.0"
description = "Library for decoding & encoding a JSON stream"
repository = "https://github.com/haydnv/destream_json"
readme = "README.md"

categories = ["asynchronous", "encoding", "parser-implementations", "parsing", "web-programming"]
keywords = ["json", "stream", "serialize", "deserialize"]

[features]
default = []
tokio-io = ["tokio/io-util"]
value = ["number-general/stream"]
all = ["tokio-io", "value"]

[dependencies]
async-recursion = "1.1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.7"
destream = "0.8"
futures = "0.3"
number-general = { version = "0.12", optional = true }
pin-project = "1.1"
tokio = { version = "1.35", features = ["io-util"], optional = true }
uuid = "1.10"

[dev-dependencies]
number-general = { version = "0.12", features=["stream"] }
tokio = { version = "1.39", features = ["fs", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-test = "0.4"
test-case = "3.3.1"
